# cuda-quantum

./: .gitignore  .gitmodules  CMakeLists.txt  mps.py  run.sh  showcase.cpp  showcase.cu  showcase_add.cpp
include/: CMakeLists.txt
include/cudaq/: CMakeLists.txt
include/cudaq/Frontend/nvqpp/: ASTBridge.h
include/cudaq/Optimizer/Builder/: Factory.h  Intrinsics.h  Runtime.h
include/cudaq/Optimizer/CAPI/: Dialects.h
include/cudaq/Optimizer/CodeGen/: Pipelines.h  QIRFunctionNames.h
include/cudaq/Optimizer/Dialect/: CMakeLists.txt
include/cudaq/Optimizer/Transforms/: Extensions.h  Passes.h  Passes.td
include/cudaq/PDLL/: CMakeLists.txt  cudaq.pdll
include/cudaq/Parser/: QASM.h
include/cudaq/Support/: TargetConfig.h
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp
qruntime/cudaq/: CMakeLists.txt  cudaq.cpp  host_config.h  platform.h  target_config.cpp
qruntime/cudaq/algorithms/: draw.cpp  draw.h  get_state.h  observe.h  resource_estimation.h  sample.h
qruntime/cudaq/builder/: kernel_builder.cpp  kernels.cpp
qruntime/cudaq/distributed/: mpi_plugin.cpp
qruntime/cudaq/platform/: QuantumExecutionQueue.h  qpu.h  quantum_platform.cpp  quantum_platform.h
qruntime/cudaq/platform/default/: DefaultQuantumPlatform.cpp
qruntime/cudaq/qis/: execution_manager.cpp  execution_manager.h  qubit_qis.h  state.cpp  state.h
qruntime/cudaq/qis/managers/: BasicExecutionManager.h
qruntime/cudaq/simulators/: CircuitSimulator.h  Gates.h
qruntime/cudaq/simulators/custatevec/: CuStateVecCircuitSimulator.cu  CuStateVecCircuitSimulatorF32.cu  CuStateVecState.h
qruntime/cudaq/spin/: matrix.cpp  spin_op.cpp
qruntime/cudaq/utils/: BaseRemoteRESTQPU.h  Executor.cpp  Executor.h  Future.cpp  Logger.h  NoiseModel.cpp  ServerHelper.cpp  ServerHelper.h  cudaq_utils.cpp  extension_point.h
rt/: CMakeLists.txt  cudaq.h
rt/cudaq/: CMakeLists.txt  launch.h
rt/cudaq/operators/: CMakeLists.txt  boson_op.cpp  callback.h  fermion_op.cpp  helpers.cpp  product_op.cpp  spin_op.cpp  sum_op.cpp
rt/cudaq/platform/: CMakeLists.txt  config.h  qpu.h  type_traits.h
rt/cudaq/platform/qpus/: all.h  (+1 more)
rt/cudaq/policies/: CMakeLists.txt  base_policy.h  policies.h
rt/cudaq/qis/: CMakeLists.txt  noise_model.cpp  qis.h  qudit.h  state.cpp  state.h
rt/cudaq/utils/: environment.h  extension_point.h  logger.cpp  logger.h
runtime/cudaq/: CMakeLists.txt  algorithm.h  cudaq.cpp  operator.h  photonics.h  platform.h  tensor.h
runtime/cudaq/algorithms/: broadcast.h  device.h  draw.h  evolve.cpp  evolve.h  evolve_internal.h  get_state.h  observe.h  resource_estimation.h  run.h  sample.h  unitary.h  vqe.h
runtime/cudaq/builder/: CMakeLists.txt  kernel_builder.cpp  kernel_builder.h
runtime/cudaq/common/: CMakeLists.txt
runtime/cudaq/driver/: CMakeLists.txt  channel.h  client.h  device.h  device_ptr.h  driver.cpp  driver.h  driver_qpu.cpp  target.cpp  target.h
runtime/cudaq/driver_v1_old/: device_ptr.h  driver.h
runtime/cudaq/dynamics/: CMakeLists.txt
runtime/cudaq/nvqir/: CMakeLists.txt
runtime/cudaq/operators/: boson_handler.cpp  boson_handler.h  fermion_handler.cpp  fermion_handler.h  fermion_op.cpp  matrix_handler.cpp  matrix_handler.h  operator_data.cpp  operator_data.h  particle_handler.cpp  particle_handler.h  spin_handler.cpp  spin_handler.h
runtime/cudaq/platform/: CMakeLists.txt  README.md  config.h  dependency_graph.puml  gates.h  platform.cpp  platform.h  qpu.h  qpu_traits.h  quantum_platform.cpp  quantum_platform.h
runtime/cudaq/platformv2/: CMakeLists.txt  config.cpp  config.h  gates.h  platform.cpp  platform.h  qpu.h  qpu_traits.h
runtime/cudaq/qis/: execution_manager.h  kernel_utils.h  qubit_qis.h  qudit.h  qudit_info.h  qvector.h  remote_state.cpp  state.cpp
runtime/cudaq/spin/: CMakeLists.txt
runtime/cudaq/utils/: cudaq_utils.h  extension_point.h  heterogeneous_map.h  matrix.cpp  process.h  registry.h  tensor.cpp  tensor.h  tensor_impl.h  tuple_utils.h  type_traits.h
runtime/nvqir/clifford/: CMakeLists.txt  StimCircuitSimulator.cpp  clifford.config
tools/cudaq-control/: CMakeLists.txt  cudaq-control.cpp
tools/cudaq-extend/: CMakeLists.txt  cudaq-extend.py
tools/cudaq-pdll/: CMakeLists.txt  cudaq-pdll.cpp
tools/cudaq-synth/: CMakeLists.txt  cudaq-synth.cpp
unittests/: CMakeLists.txt  runtime_tester.cpp
unittests/Optimizer/: CMakeLists.txt  QuakeSynthTester.cpp
unittests/backends/: CMakeLists.txt  QPPDMTester.cpp  QPPTester.cpp
unittests/backends/anyon/: AnyonLocalEmulationTester.cpp  AnyonTester.cpp  CMakeLists.txt
unittests/backends/braket/: BraketLocalEmulatorTester.cpp  BraketTester.cpp  CMakeLists.txt
unittests/backends/infleqtion/: CMakeLists.txt  InfleqtionTester.cpp
unittests/backends/ionq/: CMakeLists.txt  IonQTester.cpp
unittests/backends/iqm/: CMakeLists.txt  IQMTester.cpp
unittests/backends/oqc/: CMakeLists.txt  OQCTester.cpp
unittests/backends/pasqal/: CMakeLists.txt
unittests/backends/qpp_observe/: CMakeLists.txt
unittests/backends/quantinuum/: CMakeLists.txt  QuantinuumLocalEmulationTester.cpp  QuantinuumTester.cpp
unittests/backends/quera/: CMakeLists.txt
unittests/driver/: CMakeLists.txt  add_driver_test.cpp  ethernet_host_cuda_channel_tester.cpp  ethernet_host_shmem_channel_pass_ptrs_tester.cpp  ethernet_host_shmem_channel_tester.cpp  shmem_cuda_channel_tester.cpp  shmem_driver_tester.cpp  shmem_full_pass_ptrs_tester.cpp  shmem_host_ethernet_channel_tester.cpp  test.cu  test_cuda.cpp  test_cuda.cu
unittests/integration/: async_tester.cpp  builder_tester.cpp  get_state_tester.cpp  kernels_tester.cpp  noise_tester.cpp  qubit_allocation.cpp  remote_prototype_tester.cpp
unittests/mqpu/: dynamics_async_tester.cpp  mqpu_tester.cpp
unittests/operator/: ExperimentalBosonOpTester.cpp  ExperimentalFermionOpTester.cpp  ExperimentalMatrixOpTester.cpp  ExperimentalSpinOpTester.cpp
unittests/qir/: NVQIRTester.cpp
unittests/qis/: QubitQISTester.cpp
unittests/qudit/: SimpleQuditTester.cpp
unittests/qudit/simple_qudit/: CMakeLists.txt  SimpleQuditExecutionManager.cpp
unittests/utils/: Tensor.cpp
(+467 files in other folders)
